--- a/destinations/templates/detail.html
+++ b/destinations/templates/detail.html
@@ -3,15 +3,15 @@
 {% block title %}Detail{% endblock title %} 
 
 {% block content %}
-    <p>{{destination.name}}</p>
+    <h1>{{destination.name}}</h1>
     <p>{{destination.description}}</p>
     <p>{{destination.activities}}</p>
     <p><img src="{{destination.pretty_picture.url}}"></p>
     <p>{{destination.optimal_visiting_season}}</p>
     <a href="{% url 'destination-update' destination.id %}">
-        <button>Update</button>
+        <button class="btn btn-primary">Update</button>
     </a>
     <a href="{% url 'destination-delete' destination.id %}">
-        <button>Delete</button>
+        <button class="btn btn-danger">Delete</button>
     </a>
 {% endblock content %}
